Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17963

XMLHttpRequest does not support the DELETE method

    XMLWordPrintable

Details

    • 0eeb925aa5039ffddf8d623f250980fc4c97712em, 59d7bac9fb37178d9ec025dd91fb32f08e655d4d (4.8)

    Description

      Trying to issue a DELETE command with a XMLHttpRequest object fails with the exception.

      Error: Unsupported HTTP method type

      If it helps, I'm using an https url.

      Attachments

        For Gerrit Dashboard: QTBUG-17963
        # Subject Branch Project Status CR V

        Activity

          People

            aakenned Aaron Kennedy
            marionegroponzi@gmail.com Mario Negro Ponzi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes