XMLHttpRequest does not support the DELETE method

This is a backport from qt5 commit:
0eeb925aa5039ffddf8d623f250980fc4c97712e

Task-number: QTBUG-17963
Change-Id: Ibc262e81d6c7d3b6882461627a7a312d1fbafb3b
Reviewed-by: Aaron Kennedy <aaron.kennedy@nokia.com>
Reviewed-by: Kent Hansen <kent.hansen@nokia.com>